--- a/D-marina-EasyToReserve Extension/Info.plist
+++ b/D-marina-EasyToReserve Extension/Info.plist
@@ -13,6 +13,26 @@
 			<dict>
 				<key>Script</key>
 				<string>script.js</string>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>https://d-marina.resv.jp/reserve/calendar.php</string>
+				</array>
+			</dict>
+			<dict>
+				<key>Script</key>
+				<string>Plan.js</string>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>https://d-marina.resv.jp/reserve/calendar.php</string>
+				</array>
+			</dict>
+			<dict>
+				<key>Script</key>
+				<string>Endpoint.js</string>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>https://d-marina.resv.jp/reserve/calendar.php</string>
+				</array>
 			</dict>
 		</array>
 		<key>SFSafariToolbarItem</key>
@@ -30,7 +50,7 @@
 		<dict>
 			<key>Allowed Domains</key>
 			<array>
-				<string>example.com</string>
+				<string>d-marina.resv.jp</string>
 			</array>
 			<key>Level</key>
 			<string>Some</string>
