--- a/D-marina-EasyToReserve Extension/Info.plist
+++ b/D-marina-EasyToReserve Extension/Info.plist
@@ -87,7 +87,7 @@
 			<key>Identifier</key>
 			<string>Button</string>
 			<key>Image</key>
-			<string>ToolbarItemIcon.pdf</string>
+			<string>$(ES_TOOLBARITEM_ICON)</string>
 			<key>Label</key>
 			<string>Show All Availabilities</string>
 		</dict>
