Adds a navigation to the reservation page to simplify the operation using this extension.

--- a/D-marina-EasyToReserve Extension/Info.plist
+++ b/D-marina-EasyToReserve Extension/Info.plist
@@ -34,7 +34,31 @@
 					<string>https://d-marina.resv.jp/reserve/calendar.php</string>
 				</array>
 				<key>Script</key>
+				<string>PlanCanvas.js</string>
+			</dict>
+			<dict>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>https://d-marina.resv.jp/reserve/calendar.php</string>
+				</array>
+				<key>Script</key>
 				<string>Plan.js</string>
+			</dict>
+			<dict>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>https://d-marina.resv.jp/reserve/calendar.php</string>
+				</array>
+				<key>Script</key>
+				<string>State.js</string>
+			</dict>
+			<dict>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>https://d-marina.resv.jp/reserve/calendar.php</string>
+				</array>
+				<key>Script</key>
+				<string>StateIterator.js</string>
 			</dict>
 			<dict>
 				<key>Allowed URL Patterns</key>
@@ -67,6 +91,22 @@
 				</array>
 				<key>Script</key>
 				<string>DateComponents.js</string>
+			</dict>
+			<dict>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>https://d-marina.resv.jp/reserve/calendar.php</string>
+				</array>
+				<key>Script</key>
+				<string>Boat.js</string>
+			</dict>
+			<dict>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>https://d-marina.resv.jp/reserve/calendar.php</string>
+				</array>
+				<key>Script</key>
+				<string>Course.js</string>
 			</dict>
 		</array>
 		<key>SFSafariStyleSheet</key>
