Adjusts width by script without removing original width specified in css on main node.

--- a/D-marina-EasyToReserve Extension/Info.plist
+++ b/D-marina-EasyToReserve Extension/Info.plist
@@ -26,6 +26,14 @@
 					<string>https://d-marina.resv.jp/reserve/calendar.php</string>
 				</array>
 				<key>Script</key>
+				<string>Debug.js</string>
+			</dict>
+			<dict>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>https://d-marina.resv.jp/reserve/calendar.php</string>
+				</array>
+				<key>Script</key>
 				<string>Canvas.js</string>
 			</dict>
 			<dict>
